discussion/kv_engine/162171/162171_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Introduce CheckpointBench.ReleaseExpelledItems

Change-Id: Ia03c6a1130931673ab885945e751b2e2e03532f1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-23 10:57:08.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-23 11:13:15.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34300/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint.cc:533:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34300/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40298/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/magma/tools/magma_dump/magma_dump.cc(24): fatal error C1083: Cannot open include file: "storage_common/local_doc_constants.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40298/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12743/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:70:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:77:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:97:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:105:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:125:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:132:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12743/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:70:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15126/ : FAILURE

Compile error at [2021-09-23T11:10:11.415Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/magma/tools/magma_dump/magma_dump.cc:24:10:
fatal error: "storage_common/local_doc_constants.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15126/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22626/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2382/ : FAILURE

Compile error at [2021-09-23T11:07:18.319Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/magma/tools/magma_dump/magma_dump.cc:24:10:
fatal error: "storage_common/local_doc_constants.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2382/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2415/ : FAILURE

Compile error at [2021-09-23T11:06:37.635Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/magma/tools/magma_dump/magma_dump.cc:24:10:
fatal error: storage_common/local_doc_constants.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2415/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14614/ : FAILURE

Compile error at [2021-09-23T11:10:07.181Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14614/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13501/ : FAILURE

Compile error at [2021-09-23T11:09:14.982Z] ../magma/tools/magma_dump/magma_dump_main.cc:22:10:
fatal error: "storage_common/local_doc_constants.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13501/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14358/ : FAILURE

Compile error at [2021-09-23T11:08:08.523Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14358/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11533/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
